# haskell-appendices

cabal-files/doctest/: README.md  doctest-cabal.cabal
cabal-files/doctest-discover/: README.md  doctest-discover.cabal
cabal-files/doctest-discover/src/: Example.hs
cabal-files/hlint/: README.md  hlint-cabal.cabal
cabal-files/hlint/src/: Example.hs
cabal-files/hlint/test/: HLint.hs
cabal-files/hspec/: README.md  hspec-cabal.cabal
cabal-files/hspec/src/: Example.hs
cabal-files/hspec/test/: ExampleSpec.hs
