name:                doctest-discover-example
version:             0.1.0.0
author:              Nick Partridge
maintainer:          nkpart@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Example
  hs-source-dirs:      src
  build-depends:       base
  default-language:    Haskell2010

test-suite doctest
    type: exitcode-stdio-1.0
    default-language:    Haskell2010
    hs-source-dirs: test
    main-is: doctests.hs
    build-depends: base
                 , doctest, doctest-discover
                -- the library this cabal file defines
                 , doctest-discover-example
