name:                doctest-cabal
version:             0.1.0.0
author:              Nick Partridge
maintainer:          nkpart@gmail.com
build-type:          Custom
cabal-version:       >=1.10

library
  exposed-modules:     Example
  hs-source-dirs:      src
  build-depends:       base
  default-language:    Haskell2010

test-suite doctests
    type: exitcode-stdio-1.0
    default-language:    Haskell2010
    main-is: doctests.hs
    hs-source-dirs: test
    build-depends: base
                 , doctest
                 -- Needed by the doctest runner
                 , filepath >= 1.3
                 , directory >= 1.1
                -- Anything other libs that the doctests need to be run