name:                hlint-cabal
version:             0.1.0.0
author:              Nick Partridge
maintainer:          nkpart@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Example
  hs-source-dirs:      src
  build-depends:       base
  default-language:    Haskell2010

test-suite hlint
    build-depends: base, hlint == 1.9.*
    default-language: Haskell2010
    hs-source-dirs: test
    main-is: HLint.hs
    type: exitcode-stdio-1.0
