name:                hspec-cabal
version:             0.1.0.0
author:              Nick Partridge
maintainer:          nkpart@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Example
  hs-source-dirs:      src
  build-depends:       base
  default-language:    Haskell2010

test-suite hspec
    type: exitcode-stdio-1.0
    default-language:    Haskell2010
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends: base
                 , hspec
                -- the library this cabal file defines
                 , hspec-cabal
